# skillforge

./: .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml  pyrightconfig.json
.github/workflows/: skill-check.yml
docs/: ci-setup.md  index.md
src/skillforge/: __init__.py  builder.py  manager.py  models.py  publisher.py  scanner.py  validator.py
src/skillforge/cli/: build.py  init.py  main.py  publish.py  scan.py  validate.py
src/skillforge/templates/init/: SKILL.md.j2
tests/: conftest.py  test_builder.py  test_cli.py  test_manager.py  test_models.py  test_scanner.py  test_validator.py
tests/fixtures/invalid-skill/: SKILL.md
tests/fixtures/multi-skill-repo/skill-a/: SKILL.md
tests/fixtures/multi-skill-repo/skill-b/: SKILL.md
tests/fixtures/valid-skill/: SKILL.md
tests/fixtures/valid-skill/scripts/: helper.py
tests/fixtures/valid-skill/templates/: example.py.j2
