[project]
name = "skillforge"
version = "0.1.0"
description = "CLI for creating, managing, and publishing agent skills"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Álvaro Borrás Fernández" },
]
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.scripts]
skillforge = "skillforge.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-v", "--tb=short"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true

[tool.hatch.build.targets.wheel]
packages = ["src/skillforge"]
